# rust-toy-oauth-server

./: Cargo.toml
src/: main.rs
templates/: authorize.html
