[package]
name = "rust-toy-oauth-server"
version = "0.1.0"
authors = ["Shingo Yamazaki <shingoyamazaki00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
askama = "0.8"
